--- a/TODO.txt
+++ b/TODO.txt
@@ -3,13 +3,17 @@
 
   "CONTACTS -- THE BASICS"
 
-  * Implement phone numbers, with a neat interface like emails and ability to pick the country from a list of country codes
+  AFTERNOON:
 
-  * Make the contact list look better, maybe adding columns
-  * Check the ordering of the contacts widget, sort by name
+  * Add fields "favourite contact" (virtual?), "syncModule" (string, will make it read-only), "syncId" (foreign ID)
+
+  * Make the contact list look better, maybe adding columns. Make a right box first, will be used for favourites
+  * Check the ordering of the contacts widget, sort by name option
 
   * Link contacts with users, make sure that each newly created user has a contact attached to it (userId field in contact)
   * Have "Tell us about you" screen when creating workspace, place contact editing in UserConfig
+  * In UserConfig, add option to have a default country code for SMSes and contact data entry
+
 
   "CONTACTS -- IMPROVEMENTS"
 
@@ -20,29 +24,38 @@
 
   * Write "contact lookup" widget that returns a contact, generic one
 
-  * Make initial investigation re: Google+ and Facebook integration, maybe add fields
+  * Make initial investigation re: Google+ and Facebook integration, maybe add fields.
+  * Add buttons to re-sync all contacts from specified modules
+
+  --------------------------
+  DEADLINE: 28 February 2014
+  --------------------------
 
   "MESSAGES"
 
   *****
     Add ability to type messages underneath contacts, send a message to multiple recipients (1:n)
     - Use https://bitbucket.org/mutopia/autobox, but maybe use others
+    User picks if it's an SMS or if it's an email.  The sending/editing widget will have to change accordingly (SMSes are given less space, no subject)
+
 
   "BOOKINGS"
   * Make a "booking": an abstract entity that can be owned by a contact and that has a name and a bunch of people attached.
-  ** 
-    Implement simple TODO list for the bookings (first complex contained widget), date/time from, date/time to
-  **
-    Add calendar (Dojox's), rendering users' birthdays and TODO items in it
+
+  ** Ability to have messages under a specific booking, rather than just under a user
+
+  ** Implement simple TODO list for the bookings (first complex contained widget), date/time from, date/time to, who
+
+  ** Add calendar (Dojox's), rendering users' birthdays and TODO items in it
 
 
   "FINISH UP"
-  * Make up god permissions mixin, setting God, add them
+  * Make up God permissions mixin, setting God, add them
   * Make God application separate, with separate login (only God can login)
 
-  --------------------------
-  DEADLINE: 28 February 2013
-  --------------------------
+  ------------------------
+  DEADLINE: 30 March  2014
+  ------------------------
 
   "THE MISSING PIECES"
 
@@ -50,10 +63,7 @@
   -----------------------
   * Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the
     status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages.
-
-  * Integrate message-sending with the current simple comment infrastructure (!). User picks if it's an SMS or if it's an email.
-    The sending/editing widget will have to change accordingly (SMSes are given less space, no subject)
-
+  * Integrate message-sending with the current simple comment infrastructure (!). 
   * Develop the "inbox" for incoming emails/SMSes, mark as read, archived, etc. When an email or SMS comes in, ability to match it to a booking
 
   User management and invites in Hotplate
@@ -66,18 +76,13 @@
 
   * Add a "user management" section in settings for Admins only
   * Write a "message browser" for the workspace admin so that they can see exactly what was sent, when, and see the logs
-  * Write a "log browser" for workspace owners and for ME to see what happened, with filters
+  * Write a "log browser" for workspace owners and for God to see what happened, with filters
 
   * Have a look at hotDojoWidgets/lib/hotDojoWidgets.js, image in head will appear, might be good for the app
 
   MARKET IT
   ---------
 
-  --------------------------
-  DEADLINE: 30 March 2013
-  --------------------------
-
-  * Import contacts from G+ and Facebook, with ph numbers. Imported contacts are read-only
 
   Advanced bookings
   -----------------
@@ -92,33 +97,21 @@
   * Ability to send messages to different present types (all types in a booking)
   * Ability to set templates for messages of different types, with instant previews
 
-  ----------------------------
-  DEADLINE: 30th April 2013
-  ----------------------------
-
-  * Write a quickstart guide to write a hotplate application
-  * Document the WHOLE thing, SERVER
-  * Document the WHOLE thing, CLIENT (Dojo)
-
-
-  LATER (hopefully other contributors)
-  ------------------------------------
-  * Use SOCKJS for messaging, no more polling (authentication and reconnection are tricky)
-  * Make sure that EditingWidget and StoreSelect are blind-friendly
-  * Add anination effects
-
-  THE MONEY SIDE
+  The money side
   --------------
-
-  PHASE 1: Product pricing information
-  * Add product info for things provided: For each person added, [ product, quantity OR from/to times, accounting entries ]
-
-  PHASE 2: Money/billing
   * Accounting summaries for each booking (with system-calculated ones)
   * Interface with payment system (Paypal?)
   * Ability to send invoices
   * Ability to _store_ received invoices
 
+
+
+ LATER (hopefully other contributors)
+  ------------------------------------
+  * Use SOCKJS for messaging, no more polling (authentication and reconnection are tricky)
+  * Make sure that EditingWidget and StoreSelect are blind-friendly
+    Allow country selection for phone number from a select box (straight, Dojo's?)
+  * Add animations
 
   DONE:
   * Password1 and password2, fields, make dependent on each other
@@ -623,3 +616,6 @@
   * Add Company Name or "type flag" to contacts (companies don't have middlename, lastname or DOB, so hide them)
   * Deal with textboxes, add hooks to EditableList to deal with form submitting and widget assigning so that checkboxes work
   * Fix horrible resize problem with the contact form
+  * Implement phone numbers, with a neat interface like emails and ability to pick the country from a list of country codes
+  * Add data about allowed countries somewhere both for client and for server side (shared function!)
+  * Check country code and phone number client/server side
